--- a/portfolio-master/portfolio-master/app/routes/home/project-summary.module.css
+++ b/portfolio-master/portfolio-master/app/routes/home/project-summary.module.css
@@ -88,7 +88,6 @@
   justify-content: center;
   height: 100%;
   width: 100%;
-  overflow: clip;
 }
 
 .model {
